<?xml version="1.0"?>
<package format="2">
  <name>product_detection</name>
  <version>0.0.0</version>
  <description>
    The package provides scripts for detecting products in a shelf.
  </description>
  <license>Apache 2.0</license>
  <maintainer email="ych0610765@gmail.com">Handian Yang</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>pcl_conversions</build_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <build_depend>pcl_ros</build_depend>
  <exec_depend>pcl_ros</exec_depend>

</package>
